@@ -570,8 +570,6 @@ has 'result' => (
     isa       => 'HTML::FormHandler::Field::Result',
     is        => 'ro',
     weak_ref  => 1,
-    lazy      => 1,
-    builder   => 'build_result',
     clearer   => 'clear_result',
     predicate => 'has_result',
     writer    => '_set_result',
@@ -601,7 +599,12 @@ sub has_value {
     return $self->result->has_value;
 }
 
-# this should normally only be called for field tests
+# these should normally only be called for field tests
+sub reset_result {
+    my $self = shift;
+    $self->clear_result;
+    $self->build_result;
+}
 sub build_result {
     my $self = shift;
     my @parent = ( 'parent' => $self->parent->result )
@@ -612,7 +615,7 @@ sub build_result {
         @parent
     );
     $self->_set_pin_result($result);    # to prevent garbage collection of result
-    return $result;
+    $self->_set_result($result);
 }
 
 sub input {
