@@ -12,6 +12,7 @@ $ENV{LANGUAGE_HANDLE} = HTML::FormHandler::I18N->get_handle('en_en');
 my $class = 'HTML::FormHandler::Field::Boolean';
 use_ok($class);
 my $field = $class->new( name => 'test', );
+$field->build_result;
 ok( defined $field, 'new() called' );
 $field->_set_input(1);
 $field->validate_field;
@@ -34,6 +35,7 @@ is( $field->value, 0, 'Test true == 0' );
 $class = 'HTML::FormHandler::Field::Checkbox';
 use_ok($class);
 $field = $class->new( name => 'test', );
+$field->build_result;
 ok( defined $field, 'new() called' );
 $field->_set_input(1);
 $field->validate_field;
@@ -55,6 +57,7 @@ $field = $class->new(
    name     => 'test_field2',
    required => 1
 );
+$field->build_result;
 $field->_set_input(0);
 $field->validate_field;
 ok( $field->has_errors, 'required field fails with 0' );
@@ -64,6 +67,7 @@ ok( $field->has_errors, 'required field fails with 0' );
 $class = 'HTML::FormHandler::Field::Email';
 use_ok($class);
 $field = $class->new( name => 'test', );
+$field->build_result;
 ok( defined $field, 'new() called' );
 my $address = 'test@example.com';
 $field->_set_input( $address );
@@ -86,6 +90,7 @@ is( $field->value, 'test@example.com', 'is email-valid corrected input string' )
 $class = 'HTML::FormHandler::Field::Hidden';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 my $string = 'Some text';
 $field->_set_input( $string );
@@ -125,6 +130,7 @@ ok( !$field->has_errors, 'Test plenty long enough' );
 $class = 'HTML::FormHandler::Field::Integer';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->reset_result;
 ok( defined $field,  'new() called' );
 $field->_set_input( 1 );
 $field->validate_field;
@@ -187,6 +193,7 @@ $field = $class->new(
     range_start => 30,
     range_end   => 39,
 );
+$field->build_result;
 ok( defined $field,  'new() called' );
 $field->_set_input( 30 );
 $field->validate_field;
@@ -209,6 +216,7 @@ ok( $field->has_errors, '40 out of range' );
 $class = 'HTML::FormHandler::Field::Minute';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 $field->_set_input( 0 );
 $field->validate_field;
@@ -231,6 +239,7 @@ ok( $field->has_errors, '60 out of range' );
 $class = 'HTML::FormHandler::Field::Money';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 $field->_set_input( '   $123.45  ' );
 $field->validate_field;
@@ -250,6 +259,7 @@ is( $field->value, '2345.00', 'transformation worked: 2345 => 2345.00' );
 $class = 'HTML::FormHandler::Field::MonthDay';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 $field->_set_input( 1 );
 $field->validate_field;
@@ -272,6 +282,7 @@ ok( $field->has_errors, '32 out of range' );
 $class = 'HTML::FormHandler::Field::MonthName';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 for ( 1 .. 12 ) {
     $field->_set_input( $_ );
@@ -290,6 +301,7 @@ ok( $field->has_errors, '13 is not valid day of the week' );
 $class = 'HTML::FormHandler::Field::Month';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 $field->_set_input( 1 );
 $field->validate_field;
@@ -317,6 +329,7 @@ is( $field->errors->[0], "'March' is not a valid value", 'is error message' );
 $class = 'HTML::FormHandler::Field::Multiple';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 $field->options([
     { value => 1, label => 'one' },
@@ -348,6 +361,7 @@ is( $field->errors->[0], "'4' is not a valid value", 'Error message' );
 $class = 'HTML::FormHandler::Field::PosInteger';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 $field->_set_input( 1 );
 $field->validate_field;
@@ -376,6 +390,7 @@ ok( $field->has_errors, 'Test real number ' );
 $class = 'HTML::FormHandler::Field::Second';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 $field->_set_input( 0 );
 $field->validate_field;
@@ -398,6 +413,7 @@ ok( $field->has_errors, '60 out of range' );
 $class = 'HTML::FormHandler::Field::Select';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 ok( $field->options, 'Test for init_options failure in 0.09' );
 my $options = [
@@ -427,6 +443,7 @@ is( $field->num_options, 3, 'right number of options');
 $class = 'HTML::FormHandler::Field::TextArea';
 use_ok( $class );
 $field = $class->new( name => 'comments', cols => 40, rows => 3 );
+$field->build_result;
 ok( $field, 'get TextArea field');
 $field->_set_input("Testing, testing, testing... This is a test");
 $field->validate_field;
@@ -441,6 +458,7 @@ is( $field->errors->[0], 'Field should not exceed 10 characters. You entered 43'
 $class = 'HTML::FormHandler::Field::Text';
 use_ok( $class );
 $field = $class->new( name    => 'test',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 $string = 'Some text';
 $field->_set_input( $string );
@@ -476,6 +494,7 @@ $field->minlength( 4 );
 $field->validate_field;
 ok( !$field->has_errors, 'Test plenty long enough' );
 $field = $class->new( name    => 'test_not_nullable', not_nullable => 1);
+$field->build_result;
 $field->input('');
 $field->validate_field;
 is( $field->value, '', 'empty string');
@@ -485,6 +504,7 @@ is( $field->value, '', 'empty string');
 $class = 'HTML::FormHandler::Field::Weekday';
 use_ok( $class );
 $field = $class->new( name    => 'test_field',);
+$field->build_result;
 ok( defined $field,  'new() called' );
 for ( 0 .. 6 ) {
     $field->_set_input( $_ );
@@ -503,6 +523,7 @@ ok( $field->has_errors, '7 is not valid day of the week' );
 $class = 'HTML::FormHandler::Field::Year';
 use_ok( $class );
 $field = $class->new( name    => 'test_field' );
+$field->build_result;
 ok( defined $field,  'new() called' );
 $field->_set_input( 0 );
 $field->validate_field;
@@ -519,6 +540,7 @@ ok( $field->has_errors, '2100 makes the author really old' );
 $class = 'HTML::FormHandler::Field::Float';
 use_ok( $class );
 $field = $class->new( name => 'float_test' );
+$field->build_result;
 ok( defined $field, 'field built' );
 $field->_set_input( '2.0' );
 $field->validate_field;
@@ -541,6 +563,7 @@ ok( $field->validated, 'field validated' );
 $class = 'HTML::FormHandler::Field::BoolSelect';
 use_ok( $class );
 $field = $class->new( name => 'boolselect' );
+$field->build_result;
 ok( defined $field, 'field built' );
 $field->_set_input( '' );
 $field->validate_field;
