@@ -8,6 +8,7 @@ use HTML::FormHandler::Field::Text;
 my $field = HTML::FormHandler::Field::Text->new( name => 'test',
    apply => [ Collapse ]
 );
+$field->build_result;
 
 ok( $field, 'field with Collapse' );
 $field->input('This  is  a   test');
@@ -17,6 +18,7 @@ is( $field->value, 'This is a test');
 $field = HTML::FormHandler::Field::Text->new( name => 'test',
    apply => [ Upper ]
 );
+$field->build_result;
 ok( $field, 'field with Upper' );
 $field->input('This is a test');
 $field->validate_field;
@@ -25,6 +27,7 @@ is( $field->value, 'THIS IS A TEST');
 $field = HTML::FormHandler::Field::Text->new( name => 'test',
    apply => [ Lower ]
 );
+$field->build_result;
 ok( $field, 'field with Lower' );
 $field->input('This Is a Test');
 $field->validate_field;
@@ -34,6 +37,7 @@ $field = HTML::FormHandler::Field::Text->new( name => 'test',
    trim => undef,
    apply => [ Trim ]
 );
+$field->build_result;
 ok( $field, 'field with Trim' );
 $field->input('  This is a test   ');
 $field->validate_field;
